fix mobile spacing on childcare

--- a/themes/cnh/sass/_front-page.scss
+++ b/themes/cnh/sass/_front-page.scss
@@ -458,7 +458,7 @@
 
     .singular-event {
       height: 258px;
-      width: 555px;
+      width: 554px;
 
       &:first-of-type {
         margin-right: 2rem;
