--- a/themes/cnh/sass/_page-templates.scss
+++ b/themes/cnh/sass/_page-templates.scss
@@ -109,7 +109,6 @@
 
     div {
       margin-top: 0;
-      padding: 0 $base__space-unit;
       text-align: center;
 
       @include tablet {
